--- a/pom.xml
+++ b/pom.xml
@@ -1,1 +1,6 @@
-
+<project>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>Ephyles</groupId>
+  <artifactId>bot-mystere</artifactId>
+  <version>1</version>
+</project>
